# polybot

./: .env.example  .gitignore  Cargo.toml  README.md  output.txt  output2.txt  output3.txt  output_1m.txt  output_btc.txt  output_gui.txt  output_mix.txt  output_real.txt  output_v5.txt  paper_trading_bot.py  setup.sh
config/: backtest.toml  live.toml  replay.toml
crates/app/: Cargo.toml
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs
crates/app-tui/: Cargo.toml
crates/app-tui/src/: lib.rs  main.rs  tui.rs
crates/app/src/: lib.rs  main.rs  offline.rs  planner.rs  risk.rs  snapshot.rs  strategy.rs  tui.rs
crates/polymarket-adapter/: Cargo.toml
crates/polymarket-adapter/src/: lib.rs  live_execution.rs  market_data.rs
crates/strategy-sweep/: Cargo.toml
crates/strategy-sweep/src/: lib.rs  planner.rs  projector.rs  risk.rs
crates/trading-core/: Cargo.toml
crates/trading-core/src/: analyzer.rs  config.rs  engine.rs  events.rs  executor.rs  lib.rs  portfolio.rs  replay.rs  snapshot.rs  state.rs  traits.rs
crates/trading-core/src/market/: book.rs  model.rs  types.rs
data/fixtures/: sample_positive.ndjson
docs/: ontology.md
src/: lib.rs  main.rs
src/app/: engine.rs  events.rs  mod.rs  runtime.rs
src/domain/: analyzer.rs  config.rs  mod.rs
src/domain/market/: features.rs  mod.rs  model.rs  quote.rs  types.rs
src/domain/trading/: executor.rs  mod.rs  planner.rs  portfolio.rs  risk.rs  snapshot.rs
src/domain/trading/world/: mod.rs  pipeline.rs  projection.rs  tests.rs
src/infra/: market_data.rs
src/presentation/: tui.rs
