[package]
name = "app-tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
polymarket-adapter = { path = "../polymarket-adapter" }
strategy-sweep = { path = "../strategy-sweep" }
trading-core = { path = "../trading-core" }
