[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
polymarket-adapter = { path = "../polymarket-adapter" }
trading-core = { path = "../trading-core" }

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
